--- a/style.css
+++ b/style.css
@@ -5,18 +5,18 @@
     list-style: none;
 }
 
+
 body{
     background: #161616;
     font-family: 'Amatic SC';
     
-    
-}
 
+}
 .container{
     position: absolute;
     top: 30%;
     left: 50%;
-    width: 120rem;
+    width: 100%;
     height: 6rem;
     padding: 1rem;
     transform: translate(-50%, -50%);
@@ -39,7 +39,7 @@ body{
     transition: .5s;
 }
 .list-item:hover{
-    color: rgb(88, 243, 254);
+    opacity: 0.6;
     transition: .5s;
 }
 
@@ -73,7 +73,7 @@ body{
 
 .delete{
     cursor: pointer;
-    color: aquamarine;
+    opacity: 0.6;
     margin-left: 2rem;
 }
 
